chore: fixing some bugs

--- a/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
+++ b/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
@@ -77,6 +77,10 @@ form {
     transform-origin: top left;
     transition: all 0.25s ease;
     white-space: nowrap;
+    width: calc(100% - 100px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   input[type='text'],
   input[type='number'] {
@@ -94,6 +98,10 @@ form {
       background-color: var(--ifm-color-emphasis-0);
       padding: 0 rem(0.4);
       transform: translateY(rem(-2)) scale(0.75);
+      width: unset;
+      @media screen and (min-width: 320px) and (max-width: 425px) {
+        font-size: rem(1.4);
+      }
       &.tokenInputLabel {
         color: var(--smoke);
       }
@@ -107,6 +115,10 @@ form {
         background-color: var(--ifm-color-emphasis-0);
         padding: 0 rem(0.4);
         transform: translateY(rem(-2)) scale(0.75);
+        width: unset;
+        @media screen and (min-width: 320px) and (max-width: 425px) {
+          font-size: rem(1.4);
+        }
         &.tokenInputLabel {
           color: var(--smoke);
         }
