fix: remove hyphens and update tests

--- a/src/features/dashboard/components/RestrictionsAppname/RestrictionsAppname.module.scss
+++ b/src/features/dashboard/components/RestrictionsAppname/RestrictionsAppname.module.scss
@@ -3,7 +3,7 @@
 .restrictions {
   font-size: rem(1.2);
   font-weight: 400;
-  line-height: 18px;
+  line-height: rem(1.8);
   padding-left: rem(2.8);
   color: var(--colors-greyLight600);
 }
