--- a/src/features/dashboard/components/Table/scopes.cell.module.scss
+++ b/src/features/dashboard/components/Table/scopes.cell.module.scss
@@ -1,10 +1,13 @@
 @use 'src/styles/utility' as *;
 
 .scope {
+  display: inline-block;
   border: 1.6px solid var(--ifm-color-emphasis-400);
-  border-radius: 4px;
-  padding: rem(0.24) rem(0.24);
-  font-size: rem(1.1);
+  border-radius: 100vw; // pill shaped
+  padding: rem(0.25) rem(1);
+  font-size: rem(1.2);
+  margin: rem(0.5);
+  color: var(--ifm-color-emphasis-700);
 }
 
 .adminScope {
