--- a/src/features/dashboard/components/Tabs/tabs.module.scss
+++ b/src/features/dashboard/components/Tabs/tabs.module.scss
@@ -50,6 +50,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: rem(2);
+  padding: rem(2) 5vw;
   overflow-y: auto;
 }
