--- a/src/features/dashboard/components/Table/table.scss
+++ b/src/features/dashboard/components/Table/table.scss
@@ -8,26 +8,22 @@
   }
 
   thead {
-    background-color: var(--ifm-color-emphasis-200);
-    border: 3px solid var(--ifm-color-emphasis-200);
+    background-color: var(--ifm-color-emphasis-100);
+    border: 3px solid var(--ifm-color-emphasis-100);
     height: rem(5);
   }
 
   th,
   td {
-    text-align: left;
-    padding: rem(1.6);
-    min-width: rem(14.4);
-    max-width: rem(14.4);
-    overflow: visible;
-    text-overflow: ellipsis;
-    border: none;
+    display: table-cell;
+    border-left: none;
+    border-right: none;
+    border-bottom-color: var(--ifm-color-emphasis-200);
   }
 
   td:nth-child(3) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: rem(0.64);
+    max-width: rem(20);
+    min-width: rem(15);
   }
 
   td:last-child,
@@ -43,9 +39,8 @@
   }
 
   tbody tr {
+    display: table-row;
     border: none;
-    &:nth-child(even) {
-      background-color: var(--ifm-color-emphasis-100);
-    }
+    background-color: var(--ifm-color-emphasis-0);
   }
 }
