--- a/src/features/dashboard/components/Tabs/tabs.module.scss
+++ b/src/features/dashboard/components/Tabs/tabs.module.scss
@@ -18,7 +18,6 @@
 }
 
 .tabs_trigger {
-  padding: 0 rem(2);
   height: rem(4.5);
   display: flex;
   align-items: center;
@@ -35,6 +34,8 @@
     color: var(--ifm-color-emphasis-500);
     font-weight: 400;
     transition: color 0.2s;
+    padding: 0 rem(2);
+    text-align: center;
   }
 }
 
