--- a/src/features/dashboard/components/RestrictionsAppname/RestrictionsAppname.module.scss
+++ b/src/features/dashboard/components/RestrictionsAppname/RestrictionsAppname.module.scss
@@ -5,5 +5,6 @@
   font-weight: 400;
   line-height: rem(1.8);
   padding-left: rem(2.8);
+  margin-top: rem(0.5);
   color: var(--colors-greyLight600);
 }
