fix: line break responsive

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -89,6 +89,7 @@ h6 {
   color: var(--colors-coral500) !important;
   padding-left: 12px;
   font-size: var(--fontSizes-2xs) !important;
+  display: inline-block;
 }
 
 .error-border {
