--- a/src/features/dashboard/components/TokenNameRestrictions/TokenNameRestrictions.module.scss
+++ b/src/features/dashboard/components/TokenNameRestrictions/TokenNameRestrictions.module.scss
@@ -5,5 +5,6 @@
   font-weight: 400;
   line-height: 18px;
   padding-left: rem(2.8);
+  margin-top: rem(1);
   color: var(--colors-greyLight600);
 }
