--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,8 @@
   --schema-array: #ff8fc8;
   --schema-number: #acb2ff;
   --schema-integer: #f8c272;
+  --spinner-height: 100px;
+  --spinner-width: 100px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
