--- a/src/features/Home/Benefits/Benefits.module.scss
+++ b/src/features/Home/Benefits/Benefits.module.scss
@@ -35,10 +35,6 @@
     gap: rem(4);
     margin: 0 auto;
 
-    h3 {
-      margin: rem(1.6) 0;
-    }
-
     img {
       margin-bottom: rem(4);
     }
@@ -49,10 +45,6 @@
 
       div {
         width: 100%;
-      }
-
-      h3 {
-        margin: rem(1.6) 0;
       }
 
       img {
@@ -75,12 +67,16 @@
       }
       .InformationContent {
         width: rem(46.8);
-        > h1 {
+        > h3 {
           margin-bottom: rem(0.8);
         }
         > p {
           line-height: rem(3.6);
           font-size: rem(2.4);
+        }
+
+        .headingSize {
+          font-size: rem(3.2);
         }
       }
       @media screen and (max-width: 992px) {
@@ -91,7 +87,7 @@
         .InformationContent {
           width: 100%;
 
-          > h1 {
+          > h3 {
             margin-bottom: rem(0.8);
             font-size: rem(2.4);
           }
