--- a/src/features/dashboard/components/Table/scopes.cell.module.scss
+++ b/src/features/dashboard/components/Table/scopes.cell.module.scss
@@ -2,15 +2,15 @@
 
 .scope {
   display: inline-block;
-  border: 1.6px solid var(--ifm-color-emphasis-400);
+  border: rem(0.1) solid var(--ifm-color-emphasis-400);
   border-radius: 100vw; // pill shaped
-  padding: rem(0.25) rem(1);
+  padding: rem(0.2) rem(0.8);
   font-size: rem(1.2);
   margin: rem(0.5);
   color: var(--ifm-color-emphasis-700);
 }
 
 .adminScope {
-  border: 1.6px solid var(--ifm-color-primary);
-  color: var(--ifm-color-primary);
+  border: rem(0.1) solid var(--admin-border);
+  color: var(--admin-text);
 }
