--- a/src/features/dashboard/components/TokenNameRestrictions/TokenNameRestrictions.module.scss
+++ b/src/features/dashboard/components/TokenNameRestrictions/TokenNameRestrictions.module.scss
@@ -1,7 +1,10 @@
 @use 'src/styles/utility' as *;
 
 .tokenrestrictions {
-  font-size: rem(1.4);
+  display:flex;
+  flex-direction: column;
+  gap: rem(0.8);
+  font-size: rem(1.2);
   font-weight: 400;
   line-height: 18px;
   padding-left: rem(2.8);
