chore: fixing font

--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -194,6 +194,9 @@ fieldset .customTextInput:last-child {
 .termsOfConditionRegister {
   font-size: rem(1);
   text-align: center;
+  @media screen and (min-width: 992px) {
+    font-size: rem(1.4);
+  }
 }
 
 .buttons {
