--- a/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
+++ b/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
@@ -29,9 +29,15 @@
   justify-content: flex-end;
   padding: rem(2.4);
   gap: rem(0.8);
-
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+  }
   .btn {
     padding: rem(1) rem(1.6);
     border-radius: rem(1.5);
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 }
