--- a/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
+++ b/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
@@ -26,7 +26,7 @@
 
 .buttonWrapper {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   padding: rem(2.4);
   gap: rem(0.8);
   @media (max-width: 768px) {
