--- a/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
+++ b/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
@@ -12,8 +12,12 @@
   padding: rem(0.8) rem(2.4) 0;
   font-size: rem(1.4);
   line-height: rem(2);
+  white-space: nowrap;
   @media (max-width: 992px) {
     padding: 0 0 0 rem(1.6);
+  }
+  @media (max-width: 768px) {
+    padding: unset;
   }
 
   .title {
