chore: responsive font size

--- a/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
+++ b/src/features/dashboard/components/Dialogs/RegisterAppDialogSuccess/register-app-dialog-success.module.scss
@@ -19,6 +19,9 @@
   @media (max-width: 768px) {
     padding: unset;
   }
+  @media (max-width: 425px) {
+    font-size: rem(1.2);
+  }
 
   .title {
     font-weight: bold;
