chore: test cases and design fix

--- a/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
+++ b/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
@@ -96,6 +96,7 @@ form {
       color: var(--ifm-color-emphasis-1000);
       height: rem(4);
       min-width: 0;
+      width: 100%;
       border: none;
       text-indent: rem(1.2);
       font-size: rem(1.6);
