test: testcases for new components and added crypto_config to playground_requests

--- a/src/features/Apiexplorer/Schema/Schema.module.scss
+++ b/src/features/Apiexplorer/Schema/Schema.module.scss
@@ -120,6 +120,26 @@
 
     .schemaBodySignature {
       padding: 1rem 1.6rem;
+      background-color: rgba(219, 219, 219, 0.05) !important;
+      border-radius: 4px;
+      margin-bottom: rem(1);
+    }
+
+    .openOneOfObject {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    .oneOfObject {
+      > .schemaBodyDescription {
+        text-indent: rem(1.6);
+        padding: rem(1);
+        background-color: rgba(219, 219, 219, 0.05) !important;
+        color: var(--ifm-color-emphasis-200);
+        border-radius: 4px;
+        width: 100%;
+      }
     }
 
     .schemaBodyHeader {
