feat: new app dashboard and app registration flow

--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -2,6 +2,7 @@
 .spinnerContainer {
   position: relative;
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +15,7 @@
     overflow: hidden;
     animation: rotating 0.5s linear infinite;
     &:before {
-      content: "";
+      content: '';
       left: 50%;
       top: 50%;
       width: 70%;
