--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @use 'src/styles/utility' as *;
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import '@deriv/quill-design/dist/quill-design.css';
 
 /**
  * Any CSS included here will be global. The classic template
