feat: app manager desktop

--- a/src/features/dashboard/components/AppDashboardContainer/app-dashboard-container.scss
+++ b/src/features/dashboard/components/AppDashboardContainer/app-dashboard-container.scss
@@ -5,15 +5,17 @@
   padding-block: 72px;
   width: 100%;
 
-  &_main {
-    max-width: 608px;
-  }
-
   &_top {
+    max-width: 608px;
+    margin: auto;
     text-align: center;
     padding-inline: 16px;
     h2 {
       margin-bottom: 16px;
     }
+  }
+
+  &_main {
+    width: 100%;
   }
 }
