--- a/src/features/dashboard/components/AppsTable/cells.module.scss
+++ b/src/features/dashboard/components/AppsTable/cells.module.scss
@@ -1,68 +1,11 @@
 @use 'src/styles/utility' as *;
 
-@mixin actionIcon {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: rem(1.8);
-  cursor: pointer;
-  padding: rem(1.8) rem(1.8);
-  border-radius: 100%;
-}
-
-.deleteApp {
-  background-image: url(/img/delete.svg);
-  @include actionIcon;
-}
-
-.updateApp {
-  background-image: url(/img/edit.svg);
-  @include actionIcon;
-}
-
 .appActions {
   display: flex;
-  margin: rem(3);
-  justify-content: center;
-}
+  width: 168px;
 
-.tooltip {
-  position: relative;
-
-  .tooltipText {
-    visibility: hidden;
-    color: var(--ifm-color-emphasis-100);
-    background-color: var(--ifm-color-emphasis-700);
-    text-align: center;
-    border-radius: 4px;
-    position: absolute;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.3s;
-    font-size: rem(1);
-    transform: translateX(50%);
-    right: 50%;
-    bottom: rem(4);
-    padding: rem(0.5);
-
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: rem(-0.9);
-      right: 50%;
-      transform: translateX(50%);
-      margin-left: rem(-0.5);
-      border-width: 5px;
-      border-style: solid;
-      border-color: var(--ifm-color-emphasis-700) transparent transparent transparent;
-    }
-  }
-
-  &:hover {
-    transform: translateY(-0.2rem);
-
-    .tooltipText {
-      visibility: visible;
-      opacity: 1;
-    }
+  svg {
+    margin-inline: 8px;
+    cursor: pointer;
   }
 }
