--- a/src/features/dashboard/components/Modals/AppRegisterSuccessModal/app-register-success-modal.scss
+++ b/src/features/dashboard/components/Modals/AppRegisterSuccessModal/app-register-success-modal.scss
@@ -8,7 +8,7 @@
   &__icon {
     display: flex;
     justify-content: center;
-    background: #f6f7f8;
+    background: var(--solid-slate-75);
     margin-inline: -16px;
     margin-top: -16px;
     margin-bottom: 16px;
