--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,10 @@
   --smoke: #414652;
   --admin-text: #22bd41;
   --admin-border: #33c9517a;
+  --solid-slate-50: #ffffff;
+  --solid-slate-75: #f6f7f8;
+  --opacity-black-100: #00000014;
+  --opacity-black-75: #0000000a;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
