feat: complete responsive design

--- a/src/features/dashboard/components/AppsTable/apps-table.scss
+++ b/src/features/dashboard/components/AppsTable/apps-table.scss
@@ -1,8 +1,13 @@
 .apps_table {
   border: 1px solid var(--opacity-black-100);
   border-radius: 32px;
-  margin: 64px;
+  margin: 48px;
   margin-top: 0;
+
+  &.mobile {
+    border: none;
+    margin: 0px;
+  }
 
   table {
     table-layout: fixed;
@@ -54,6 +59,16 @@
     display: flex;
     justify-content: space-between;
     padding: 48px;
+
+    &.mobile {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: unset;
+    }
+    &__button {
+      margin-top: 16px;
+    }
 
     &__texts {
       display: block;
